full ui update / multi user

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -12,6 +12,7 @@
       <div class="d-flex gap-2 flex-wrap justify-content-lg-end">
         <%= link_to "Ver Estadísticas", dashboards_stats_path, class: "btn btn-outline-primary" %>
         <%= link_to "Gestionar Posts", dashboards_posts_path, class: "btn btn-outline-secondary" %>
+        <%= link_to "Gestionar Usuarios", users_path, class: "btn btn-outline-info" %>
       </div>
     </div>
   </div>
